gcc/testsuite/g++.dg/modules/import-1_g.C
// { dg-additional-options "-fmodules-ts" }
import Foop;

int main ()
{
  Thing ();
  Quux (1);  // { dg-error "not declared" }
  return 0;
}
